# react-native-nitro-archive

./: .gitignore  LICENSE  README.md  app.plugin.js  nitro.json  package-lock.json  package.json  react-native-nitro-archive.podspec  react-native-tar-bz2.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/tarbz2/: HybridTarBz2.kt
cpp/: CMakeLists.txt  HybridArchive.cpp  HybridArchive.hpp  HybridTarBz2.cpp  HybridTarBz2.hpp
cpp/compression/: BzipStream.cpp  BzipStream.hpp  GzipStream.cpp  GzipStream.hpp
cpp/sevenz/: SevenZipHandler.cpp  SevenZipHandler.hpp
cpp/tar/: TarReader.cpp  TarReader.hpp  TarWriter.cpp  TarWriter.hpp
cpp/utils/: MagicBytes.hpp
cpp/zip/: ZipHandler.cpp  ZipHandler.hpp
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml
src/: index.ts
src/specs/: Archive.nitro.ts  TarBz2.nitro.ts
